--- a/app/src/view/formulario/dadosPretendente.html
+++ b/app/src/view/formulario/dadosPretendente.html
@@ -1,173 +1,175 @@
  <div layout="column" layout-gt-sm="row" layout-padding>
-   <md-input-container class="md-block" flex-gt-sm="50">
+   <div class="md-block" flex-gt-sm="50">
       <label for="nome">Nome</label>
       <input type="text" id="nome" upper name="nome" focus
-      ng-model="cadastro.pretendente.nome" ng-tabindex="1">
-    </md-input-container>
+      class="form-control" ng-model="cadastro.pretendente.nome" ng-tabindex="1">
+    </div>
   
 
-    <md-input-container class="md-block" flex-gt-sm="25">
+    <div class="md-block" flex-gt-sm="25">
       <label for="cpf">CPF</label>
-      <input mobile="number" mascara="999.999.999-99"  id="cpf" name="cpf"
-      ng-model="cadastro.pretendente.cpf" ng-tabindex="2">
-    </md-input-container>
+      <input mobile="number"  mascara="999.999.999-99"  id="cpf" name="cpf"
+      class="form-control" ng-model="cadastro.pretendente.cpf" ng-tabindex="2">
+    </div>
 
-    <md-input-container flex-gt-sm="25">
+    <div flex-gt-sm="25">
       <label for="dataNascimento">Data Nascimento</label>
-      <md-datepicker id="dataNascimento" name="dataNascimento" ng-model="cadastro.pretendente.dataNascimento" ng-tabindex="3">
-      </md-datepicker>
-    </md-input-container>
+      <input id="dataNascimento" name="dataNascimento" class="form-control" 
+      datepicker mascara="99/99/9999"
+      ng-model="cadastro.pretendente.dataNascimento" ng-tabindex="3">
+    </div>
 
   </div>
 
 <div layout="column" layout-gt-sm="row" layout-padding>
-    <md-input-container class="md-block" flex-gt-sm="40">
+    <div class="md-block" flex-gt-sm="40">
       <label for="numDoc">Numero do Documento</label>
-      <input type="number" id="numDoc" name="numDoc" ng-model="cadastro.pretendente.numDoc" 
+      <input type="number" id="numDoc" name="numDoc" class="form-control" ng-model="cadastro.pretendente.numDoc" 
       ng-tabindex="4">
-    </md-input-container>
+    </div>
 
-    <md-input-container class="md-block" flex-gt-sm="20">
+    <div class="md-block" flex-gt-sm="20">
       <label for="orgaoExpedidor">Orgão Expedidor</label>
       <input type="text" id="orgaoExpedidor" name="orgaoExpedidor" 
-      ng-model="cadastro.pretendente.orgaoExpedidor" ng-tabindex="5">
-    </md-input-container>
+      class="form-control" ng-model="cadastro.pretendente.orgaoExpedidor" ng-tabindex="5">
+    </div>
 
-    <md-input-container flex-gt-sm="20">
+    <div flex-gt-sm="20">
       <label for="dataEmissao">Data Emissão</label>
-      <md-datepicker id="dataEmissao" name="dataEmissao" 
-      ng-model="cadastro.pretendente.dataEmissao" ng-tabindex="6"></md-datepicker>
-    </md-input-container>
+      <input id="dataEmissao" name="dataEmissao" 
+      class="form-control" datepicker mascara="99/99/9999"
+      ng-model="cadastro.pretendente.dataEmissao" ng-tabindex="6">
+    </div>
 
-    <md-input-container flex-gt-sm="20">
+    <div flex-gt-sm="20">
       <label for="dataValidade">Data Validade</label>
-      <md-datepicker id="dataValidade" name="dataValidade" 
+      <input id="dataValidade" name="dataValidade" 
+      class="form-control" datepicker mascara="99/99/9999"
       ng-model="cadastro.pretendente.dataValidade" ng-tabindex="7">
-      </md-datepicker>
-    </md-input-container>
+    </div>
 
   </div>
 
 <div layout="column" layout-gt-sm="row" layout-padding>
-    <md-input-container class="md-block" flex-gt-sm="25">
+    <div class="md-block" flex-gt-sm="25">
       <label>Sexo</label>
-      <md-select ng-model="cadastro.pretendente.sexo" ng-tabindex="8">
-        <md-option value="M">Masculino</md-option>
-        <md-option value="F">Feminino</md-option>
-      </md-select>
-    </md-input-container>
+      <select class="form-control" ng-model="cadastro.pretendente.sexo" ng-tabindex="8">
+        <option value="M">Masculino</option>
+        <option value="F">Feminino</option>
+      </select>
+    </div>
 
-    <md-input-container class="md-block" flex-gt-sm="25">
+    <div class="md-block" flex-gt-sm="25">
       <label>Estado Civil</label>
-      <md-select ng-model="cadastro.pretendente.estadoCivil" ng-tabindex="9">
-        <md-option value="">(Nenhum)</md-option>
-        <md-option value="solteiro">Solteiro(a)</md-option>
-        <md-option value="casado">Casado(a)</md-option>
-        <md-option value="separado">Separado(a)</md-option>
-        <md-option value="viuvo">Viuvo(a)</md-option>
-        <md-option value="divorciado">Divorciado(a)</md-option>
-      </md-select>
-    </md-input-container>
+      <select class="form-control" ng-model="cadastro.pretendente.estadoCivil" ng-tabindex="9">
+        <option value="">(Nenhum)</option>
+        <option value="solteiro">Solteiro(a)</option>
+        <option value="casado">Casado(a)</option>
+        <option value="separado">Separado(a)</option>
+        <option value="viuvo">Viuvo(a)</option>
+        <option value="divorciado">Divorciado(a)</option>
+      </select>
+    </div>
 
-    <md-input-container class="md-block" flex-gt-sm="25">
+    <div class="md-block" flex-gt-sm="25">
       <label for="cpfConjuge">CPF Cônjuge</label>
       <input mobile="number" mascara="999.999.999-99" id="cpfConjuge" name="cpfConjuge" 
-      ng-model="cadastro.pretendente.cpfConjuge" 
+      class="form-control" ng-model="cadastro.pretendente.cpfConjuge" 
       ng-tabindex="10">
-    </md-input-container>
+    </div>
 
-    <md-input-container class="md-block" flex-gt-sm="25">
+    <div class="md-block" flex-gt-sm="25">
       <label for="numeroDependente">Nº Dependentes</label>
       <input type="number" id="numeroDependente" name="numeroDependente" 
-      ng-model="cadastro.pretendente.numeroDependente" ng-tabindex="11">
-    </md-input-container>
+      class="form-control" ng-model="cadastro.pretendente.numeroDependente" ng-tabindex="11">
+    </div>
 
   </div>
 
     
 <div layout="column" layout-gt-sm="row" layout-padding>
-     <md-input-container class="md-block" flex-gt-sm="50">
+     <div class="md-block" flex-gt-sm="50">
       <label for="nomeMae">Nome Mãe</label>
       <input type="text" id="nomeMae" upper name="nomeMae" 
-      ng-model="cadastro.pretendente.nomeMae" ng-tabindex="12">
-    </md-input-container>
+      class="form-control" ng-model="cadastro.pretendente.nomeMae" ng-tabindex="12">
+    </div>
 
-    <md-input-container class="md-block" flex-gt-sm="50">
+    <div class="md-block" flex-gt-sm="50">
       <label for="nomePai">Nome Pai</label>
       <input type="text" id="nomePai" upper name="nomePai" 
-      ng-model="cadastro.pretendente.nomePai" ng-tabindex="13">
-    </md-input-container>
+      class="form-control" ng-model="cadastro.pretendente.nomePai" ng-tabindex="13">
+    </div>
 </div>
    
   <div layout="column" layout-gt-sm="row" layout-padding> 
-    <md-input-container class="md-block" flex-gt-sm="15">
+    <div class="md-block" flex-gt-sm="15">
       <label for="telefone">Telefone</label>
       <input mobile="tel" mascara="(99) 9999-9999?9" id="telefone" name="telefone" 
-      ng-model="cadastro.pretendente.telefone" ng-tabindex="14">
-    </md-input-container>
+      class="form-control" ng-model="cadastro.pretendente.telefone" ng-tabindex="14">
+    </div>
 
-    <md-input-container class="md-block" flex-gt-sm="15">
+    <div class="md-block" flex-gt-sm="15">
       <label for="celular">Celular</label>
       <input mobile="tel" mascara="(99) 9999-9999?9" id="celular" name="celular" 
-      ng-model="cadastro.pretendente.celular" ng-tabindex="15">
-    </md-input-container>
+      class="form-control" ng-model="cadastro.pretendente.celular" ng-tabindex="15">
+    </div>
 
-    <md-input-container class="md-block" flex-gt-sm="15">
+    <div class="md-block" flex-gt-sm="15">
       <label for="telefoneComercial">Telefone Comercial</label>
       <input mobile="tel" mascara="(99) 9999-9999?9" id="telefoneComercial" name="telefoneComercial" 
-      ng-model="cadastro.pretendente.telefoneComercial" ng-tabindex="16">
-    </md-input-container>
+      class="form-control" ng-model="cadastro.pretendente.telefoneComercial" ng-tabindex="16">
+    </div>
 
-     <md-input-container class="md-block" flex-gt-sm="35">
+     <div class="md-block" flex-gt-sm="35">
       <label for="nacionalidade">Nacionalidade</label>
       <input type="text" id="nacionalidade" name="nacionalidade" 
-      ng-model="cadastro.pretendente.nacionalidade" ng-tabindex="17">
-    </md-input-container>
+      class="form-control" ng-model="cadastro.pretendente.nacionalidade" ng-tabindex="17">
+    </div>
 
-    <md-input-container class="md-block" flex-gt-sm="20">
+    <div class="md-block" flex-gt-sm="20">
       <label for="paisOrigem">País de Origem</label>
       <input type="text" id="paisOrigem" name="paisOrigem" 
-      ng-model="cadastro.pretendente.paisOrigem" ng-tabindex="18">
-    </md-input-container>
+      class="form-control" ng-model="cadastro.pretendente.paisOrigem" ng-tabindex="18">
+    </div>
 
   </div>
 
    
  <div layout="column" layout-gt-sm="row" layout-padding> 
-    <md-input-container class="md-block" flex-gt-sm="25">
+    <div class="md-block" flex-gt-sm="25">
       <label for="tempoPais">Tempo no País</label>
       <input type="text" id="tempoPais" name="tempoPais" 
-      ng-model="cadastro.pretendente.tempoPais" ng-tabindex="19">
-    </md-input-container>
+      class="form-control" ng-model="cadastro.pretendente.tempoPais" ng-tabindex="19">
+    </div>
 
-    <md-input-container class="md-block" flex-gt-sm="25">
+    <div class="md-block" flex-gt-sm="25">
       <label for="email">Email</label>
       <input type="email" id="email" name="email" 
-      ng-model="cadastro.pretendente.email" ng-tabindex="20">
-    </md-input-container>
+      class="form-control" ng-model="cadastro.pretendente.email" ng-tabindex="20">
+    </div>
 
-    <md-input-container class="md-block" flex-gt-sm="50">
+    <div class="md-block" flex-gt-sm="50">
       <label for="email">Responsavel pela locação</label>
       <input type="email" id="email" name="email" 
-      ng-model="cadastro.pretendente.email" ng-tabindex="21">
-    </md-input-container>
+      class="form-control" ng-model="cadastro.pretendente.email" ng-tabindex="21">
+    </div>
 
   </div>
 
 <div layout="column" layout-gt-sm="row" layout-padding> 
-    <md-input-container class="md-block" flex-gt-sm="25">
+    <div class="md-block" flex-gt-sm="25">
       <label>Pretendente irá residir no imóvel</label>
-      <md-select ng-model="cadastro.pretendente.iraResidirImovel" ng-tabindex="22">
-        <md-option value="sim">SIM</md-option>
-        <md-option value="nao">NÃO</md-option>
-      </md-select>
-    </md-input-container>
+      <select class="form-control" ng-model="cadastro.pretendente.iraResidirImovel" ng-tabindex="22">
+        <option value="sim">SIM</option>
+        <option value="nao">NÃO</option>
+      </select>
+    </div>
 
-    <md-input-container class="md-block" flex-gt-sm="50">
+    <div class="md-block" flex-gt-sm="30">
       <label>Possui renda para arcar com a locação</label>
-      <md-select ng-model="cadastro.pretendente.possuiRendaArcarLocacao" ng-tabindex="23">
-        <md-option value="sim">SIM</md-option>
-        <md-option value="nao">NÃO</md-option>
-      </md-select>
-    </md-input-container>
+      <select class="form-control" ng-model="cadastro.pretendente.possuiRendaArcarLocacao" ng-tabindex="23">
+        <option value="sim">SIM</option>
+        <option value="nao">NÃO</option>
+      </select>
+    </div>
   </div>
